--- a/ElectiveTesting/Views/Shared/_Layout.cshtml
+++ b/ElectiveTesting/Views/Shared/_Layout.cshtml
@@ -23,6 +23,7 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("Election", "Index", "Election")</li>
+                    @*<li>@Html.ActionLink("Elective", "Index", "Elective")</li>*@
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                 </ul>
