Create and edit working
User stories create and edit is done.
Next is user story: Vote

--- a/ElectiveTesting/Views/Election/Create.cshtml
+++ b/ElectiveTesting/Views/Election/Create.cshtml
@@ -54,8 +54,8 @@
         <div class="form-group">
             @Html.Label("Participants", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
+                @Html.Label("All users")<div>@Html.Label("Invited users")</div>
                 <table>
-                    @Html.Label("All users")
                     <tr>
                         <td>
                              
