--- a/ElectiveTesting/Views/Election/Edit.cshtml
+++ b/ElectiveTesting/Views/Election/Edit.cshtml
@@ -74,7 +74,7 @@
                         </td>
                     </tr>
                 </table>
-                <input type="submit" value="Create" class="btn btn-default" onclick="markAllInvited();" />
+                <input type="submit" value="Save" class="btn btn-default" onclick="markAllInvited();" />
             </div>
         </div>
     </div>
