Fixed minor bug + new election index
Fixed minor bug in election edit view.
Added a functionality so users can see elections they are a part of

--- a/ElectiveTesting/Views/Election/Create.cshtml
+++ b/ElectiveTesting/Views/Election/Create.cshtml
@@ -97,7 +97,7 @@ function addItem() {
     $("#invitedUsers option").attr("selected", false);
 }
 function markAllInvited() {
-    $("#availableUsers option:selected").appendTo("#invitedUsers");
+    $("#invitedUsers option:selected").appendTo("#invitedUsers");
     $("#invitedUsers option").attr("selected", true);
 }
 function addallItems() {
