--- a/ElectiveTesting/Views/Election/Edit.cshtml
+++ b/ElectiveTesting/Views/Election/Edit.cshtml
@@ -98,7 +98,7 @@
         $("#invitedUsers option").attr("selected", false);
     }
     function markAllInvited() {
-        $("#availableUsers option:selected").appendTo("#invitedUsers");
+        $("#invitedUsers option:selected").appendTo("#invitedUsers");
         $("#invitedUsers option").attr("selected", true);
     }
     function addallItems() {
